AUTHORS file updated

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-Edison Emeremnu edisonemeremnu@gmail.com
-Tasie Ibiam tasieibiam28@gmail.com
+#This file contains the names of contributors to the simple_shell project
+
+Edison Emeremnu <edisonemeremnu@gmail.com>
+Tasie Ibiam <tasieibiam28@gmail.com>
